--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  
 
-Mongo_uri = "mongodb+srv://datta:datta1234@cluster0.065gwsz.mongodb.net/data"
+Mongo_uri = "mongodb+srv://datta:datta1234@cluster0.065gwsz.mongodb.net/data?retryWrites=true&w=majority"
